fixes cart name height for wrapping

--- a/resources/stylesheets/src/main.scss
+++ b/resources/stylesheets/src/main.scss
@@ -122,7 +122,7 @@ nav {
 		margin: 0;
 		padding: 0;
 		li {
-			margin-right: -4px;
+			margin-right: -5px;
 		  position: relative;
 		  @include transition(all 0.2s);
 			display: inline-block;
@@ -544,6 +544,7 @@ img {
 		.cart-name {
 			@include span-columns(3);
 			text-align: left;
+			height: 1px;
 			@include media(max-width $mobile) {
 				@include span-columns(3);
 		    font-size: 12px;
